--- a/task02/randomIntends/src/main/res/layout/simple_calculator.xml
+++ b/task02/randomIntends/src/main/res/layout/simple_calculator.xml
@@ -18,18 +18,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/num1"
-                    android:id="@+id/button"
+                    android:id="@+id/num1"
                     android:layout_gravity="center_horizontal|top"
-                    android:layout_column="1"/>
+                    android:layout_column="1"
+                android:onClick="getNum1" />
 
             <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/num2"
-                    android:id="@+id/button2"
+                    android:id="@+id/num2"
                     android:layout_gravity="center_horizontal|top"
-                    android:layout_column="2"/>
-
+                    android:layout_column="2"
+                android:onClick="getNum2" />
             <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
