--- a/task04/res/layout/pictureTextFragment.xml
+++ b/task04/res/layout/pictureTextFragment.xml
@@ -8,7 +8,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:name="org.guut.fragments.fragments.MyListFragment"
-    tools:layout="@layout/pictureListFragment"></fragment>
+    tools:layout="@layout/mylistfragment"></fragment>
     <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
