--- a/task04/res/layout/main.xml
+++ b/task04/res/layout/main.xml
@@ -1,22 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<fragment
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:name="org.guut.fragments.fragments.MyListFragment"
-    tools:layout="@layout/pictureListFragment"></fragment>
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1"
+    android:baselineAligned="false">
     <fragment
-        android:layout_width="wrap_content"
+        android:layout_width="167dp"
         android:layout_height="wrap_content"
-        android:name="org.guut.fragments.fragments.pictureFrame"
-        tools:layout="@layout/pictureFrameFragment"></fragment>
-    <fragment
+        android:layout_weight="0.5"
+        android:name="org.guut.fragments.fragments.pictureListFragment"
+        android:id="@+id/picture_list_fragment"
+        tools:layout="@layout/pictureListFragment"
+        />
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="org.guut.fragments.fragments.pictureText"
-        tools:layout="@layout/pictureTextFragment"></fragment>
+        android:layout_height="match_parent"
+        android:layout_weight="0.5">
+        <fragment
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:name="org.guut.fragments.fragments.pictureFrameFragment"
+            android:id="@+id/picture_picture_fragment"
+            tools:layout="@layout/pictureFrameFragment" />
+        <fragment
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:name="org.guut.fragments.fragments.pictureTextFragment"
+            android:id="@+id/picture_description_fragment"
+            tools:layout="@layout/pictureTextFragment"
+            />
+
+        </LinearLayout>
 </LinearLayout>
