--- a/task04/res/layout/pictureTextFragment.xml
+++ b/task04/res/layout/pictureTextFragment.xml
@@ -1,22 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-<fragment
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:name="org.guut.fragments.fragments.MyListFragment"
-    tools:layout="@layout/mylistfragment"></fragment>
-    <fragment
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:name="org.guut.fragments.fragments.pictureFrame"
-        tools:layout="@layout/pictureFrameFragment"></fragment>
-    <fragment
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:name="org.guut.fragments.fragments.pictureText"
-        tools:layout="@layout/pictureTextFragment"></fragment>
+        android:id="@+id/picture_description"
+        android:layout_gravity="center"
+        android:text="HEllo"/>
 </LinearLayout>
