--- a/task05/src/main/res/layout/activity_book.xml
+++ b/task05/src/main/res/layout/activity_book.xml
@@ -1,15 +1,20 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:id="@+id/rl"
+    android:orientation="vertical">
     <fragment
         android:name="android.app.ListFragment"
         android:id="@+id/frag1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
         tools:layout="@layout/list_layout" />
-
-</RelativeLayout>
+    <fragment
+        android:name="org.guut.task05.fragments.LoadButtons"
+        android:id="@+id/frag2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout="@layout/button_fragment"
+        />
+</LinearLayout>
