--- a/task06/src/main/res/layout/main_layout.xml
+++ b/task06/src/main/res/layout/main_layout.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <fragment
+        android:id="@+id/player_form_fragment"
         android:layout_height="wrap_content"
-        android:text="@string/hello"
-        android:id="@+id/textView" />
+        android:layout_width="fill_parent"
+        android:name="org.guut.task06.fragments.PlayerForm"
+        tools:layout="@layout/player_form_fragment_layout" />
+    <fragment
+        android:id="@+id/nav_buttons_fragment"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:name="org.guut.task06.fragments.NavigationButtons"
+        tools:layout="@layout/nav_button_layout" />
+
+
 </LinearLayout>
