--- a/task06/src/main/res/layout/main_layout.xml
+++ b/task06/src/main/res/layout/main_layout.xml
@@ -6,18 +6,16 @@
     android:layout_height="match_parent"
     >
 
-    <fragment
-        android:id="@+id/player_form_fragment"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:name="org.guut.task06.fragments.PlayerForm"
-        tools:layout="@layout/player_form_fragment_layout" />
+<FrameLayout
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:id="@+id/player_board_fragment_holder">
+    </FrameLayout>
+
     <fragment
         android:id="@+id/nav_buttons_fragment"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:name="org.guut.task06.fragments.NavigationButtons"
         tools:layout="@layout/nav_button_layout" />
-
-
 </LinearLayout>
